tests/rosetta/transpiler/C/bifid-cipher.c
// Generated by Mochi 0.10.32 on 2025-07-31 12:13 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <malloc.h>
#include <ctype.h>


static int contains_str(const char *arr[], size_t len, const char *val) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(arr[i], val) == 0) return 1;
    }
    return 0;
}

static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

static char* str_int(int v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%d", v);
    return strdup(buf);
}

static char* str_upper(const char *s) {
    size_t n = strlen(s);
    char *out = strdup(s);
    for(size_t i=0;i<n;i++) out[i] = toupper((unsigned char)out[i]);
    return out;
}

typedef struct { const char **keys; const char ***vals; size_t *lens; size_t len; } MapSL;

typedef struct { const char **keys; const char **vals; size_t len; } MapSS;

static const char* map_get_ss(const char *keys[], const char *vals[], size_t len, const char *key) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(keys[i], key) == 0) return vals[i];
    }
    return "";
}

static void map_set_ss(const char *keys[], const char *vals[], size_t *len, const char *key, const char *val) {
    for (size_t i = 0; i < *len; i++) {
        if (strcmp(keys[i], key) == 0) { vals[i] = val; return; }
    }
    keys[*len] = key; vals[*len] = val; (*len)++;
}

static const char** map_get_sl(const char *keys[], const char **vals[], const size_t lens[], size_t len, const char *key, size_t *out_len) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(keys[i], key) == 0) { *out_len = lens[i]; return vals[i]; }
    }
    *out_len = 0;
    return NULL;
}

static int* list_append_int(int *arr, size_t *len, int val) {
    arr = realloc(arr, (*len + 1) * sizeof(int));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    struct mallinfo mi = mallinfo();
    return (long long)mi.uordblks;
}

static const char* _substring(const char *s, int start, int end) {
    int len = (int)strlen(s);
    if (start < 0) start = 0;
    if (end > len) end = len;
    if (start > end) start = end;
    char *res = malloc(end - start + 1);
    memcpy(res, s + start, end - start);
    res[end - start] = 0;
    return res;
}

typedef struct Anon1 Anon1;

struct Anon1 {
    int e;
    int d;
};

Anon1 square_to_maps(const char* * * square, size_t square_len, size_t* square_lens, size_t square_lens_len);
const char* remove_space(const char* text, int emap);
const char* encrypt(const char* text, int emap, MapSS dmap);
const char* decrypt(const char* text, int emap, MapSS dmap);
int user_main();
int main(void);

Anon1 square_to_maps(const char* * * square, size_t square_len, size_t* square_lens, size_t square_lens_len) {
    const char* emap_keys[16] = {};
    const int* emap_vals[16] = {};
    size_t emap_lens[16] = {};
    size_t emap_len = 0;
    MapSL emap = { emap_keys, emap_vals, emap_lens, emap_len };
    const char* dmap_keys[16] = {};
    const char* dmap_vals[16] = {};
    size_t dmap_len = 0;
    MapSS dmap = { dmap_keys, dmap_vals, dmap_len };
    int x = 0LL;
    while (x < square_len) {
        const char* *row = square[(int)(x)];
        size_t row_len = square_lens[x];
        int y = 0LL;
        while (y < row_len) {
            const char* ch = row[(int)(y)];
            emap[(int)(ch)] = (int[]){ x, y };
            map_set_ss(dmap.keys, dmap.vals, &dmap.len, str_concat(str_concat(str_int(x), ","), str_int(y)), ch);
            y = y + 1LL;
        }
        x = x + 1LL;
    }
    return (Anon1){.e = emap, .d = dmap};
}

const char* remove_space(const char* text, int emap) {
    const char* s = str_upper(text);
    const char* out = "";
    int i = 0LL;
    while (i < strlen(s)) {
        const char* ch = _substring(s, i, i + 1LL);
        if ((strcmp(ch, " ") != 0) && (contains_str(emap_keys, emap_len, ch))) {
            out = str_concat(out, ch);
        }
        i = i + 1LL;
    }
    return out;
}

const char* encrypt(const char* text, int emap, MapSS dmap) {
    text = remove_space(text, emap);
    int *row0 = NULL;
    size_t row0_len = 0;
    int *row1 = NULL;
    size_t row1_len = 0;
    int i = 0LL;
    while (i < strlen(text)) {
        const char* ch = _substring(text, i, i + 1LL);
        int xy = emap[(int)(ch)];
        row0 = list_append_int(row0, &row0_len, xy[(int)(0LL)]);
        row1 = list_append_int(row1, &row1_len, xy[(int)(1LL)]);
        i = i + 1LL;
    }
    for (size_t __i = 0; __i < row1_len; __i++) {
        int v = row1[__i];
        row0 = list_append_int(row0, &row0_len, v);
    }
    const char* res = "";
    int j = 0LL;
    while (j < row0_len) {
        const char* key = str_concat(str_concat(str_int(row0[(int)(j)]), ","), str_int(row0[(int)(j + 1LL)]));
        res = str_concat(res, map_get_ss(dmap.keys, dmap.vals, dmap.len, key));
        j = j + 2LL;
    }
    return res;
}

const char* decrypt(const char* text, int emap, MapSS dmap) {
    text = remove_space(text, emap);
    int *coords = NULL;
    size_t coords_len = 0;
    int i = 0LL;
    while (i < strlen(text)) {
        const char* ch = _substring(text, i, i + 1LL);
        int xy = emap[(int)(ch)];
        coords = list_append_int(coords, &coords_len, xy[(int)(0LL)]);
        coords = list_append_int(coords, &coords_len, xy[(int)(1LL)]);
        i = i + 1LL;
    }
    int half = coords_len / 2LL;
    int *k1 = NULL;
    size_t k1_len = 0;
    int *k2 = NULL;
    size_t k2_len = 0;
    int idx = 0LL;
    while (idx < half) {
        k1 = list_append_int(k1, &k1_len, coords[(int)(idx)]);
        idx = idx + 1LL;
    }
    while (idx < coords_len) {
        k2 = list_append_int(k2, &k2_len, coords[(int)(idx)]);
        idx = idx + 1LL;
    }
    const char* res = "";
    int j = 0LL;
    while (j < half) {
        const char* key = str_concat(str_concat(str_int(k1[(int)(j)]), ","), str_int(k2[(int)(j)]));
        res = str_concat(res, map_get_ss(dmap.keys, dmap.vals, dmap.len, key));
        j = j + 1LL;
    }
    return res;
}

int user_main() {
    const char* squareRosetta[6][5] = {{"A", "B", "C", "D", "E"}, {"F", "G", "H", "I", "K"}, {"L", "M", "N", "O", "P"}, {"Q", "R", "S", "T", "U"}, {"V", "W", "X", "Y", "Z"}, {"J", "1", "2", "3", "4"}};
    size_t squareRosetta_len = 6;
    size_t squareRosetta_lens[] = {5, 5, 5, 5, 5, 5};
    size_t squareRosetta_lens_len = 6;
    const char* squareWikipedia[6][5] = {{"B", "G", "W", "K", "Z"}, {"Q", "P", "N", "D", "S"}, {"I", "O", "A", "X", "E"}, {"F", "C", "L", "U", "M"}, {"T", "H", "Y", "V", "R"}, {"J", "1", "2", "3", "4"}};
    size_t squareWikipedia_len = 6;
    size_t squareWikipedia_lens[] = {5, 5, 5, 5, 5, 5};
    size_t squareWikipedia_lens_len = 6;
    const char* textRosetta = "0ATTACKATDAWN";
    const char* textWikipedia = "FLEEATONCE";
    const char* textTest = "The invasion will start on the first of January";
    Anon1 maps = square_to_maps(squareRosetta, squareRosetta_len, squareRosetta_lens, squareRosetta_len);
    int emap = maps.e;
    int dmap = maps.d;
    puts("from Rosettacode");
    puts("original:\t 0ATTACKATDAWN");
    const char* s = encrypt(textRosetta, emap, dmap);
    puts(str_concat("codiert:\t ", s));
    s = decrypt(s, emap, dmap);
    puts(str_concat("and back:\t ", s));
    maps = square_to_maps(squareWikipedia, squareWikipedia_len, squareWikipedia_lens, squareWikipedia_len);
    emap = maps.e;
    dmap = maps.d;
    puts("from Wikipedia");
    puts("original:\t FLEEATONCE");
    s = encrypt(textWikipedia, emap, dmap);
    puts(str_concat("codiert:\t ", s));
    s = decrypt(s, emap, dmap);
    puts(str_concat("and back:\t ", s));
    maps = square_to_maps(squareWikipedia, squareWikipedia_len, squareWikipedia_lens, squareWikipedia_len);
    emap = maps.e;
    dmap = maps.d;
    puts("from Rosettacode long part");
    puts("original:\t The invasion will start on the first of January");
    s = encrypt(textTest, emap, dmap);
    puts(str_concat("codiert:\t ", s));
    s = decrypt(s, emap, dmap);
    puts(str_concat("and back:\t ", s));
}

int main(void) {
    {
        long long __start = _now();
        long long __mem_start = _mem();
        user_main();
        long long __end = _now();
        long long __mem_end = _mem();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = __mem_end - __mem_start;
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
